--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
+    <nav>
+     <li> <div class="main">
+        <div class="box">
+          <div class="logo navbar-item">
+            <i class="fa-solid fa-bomb navbar-item"></i>
+          </div>
+          <div class="field has-addons navbar-item">
+            <p class="control">
+              <input
+                class="input is-medium is-rounded"
+                type="text"
+                placeholder="Search a skill"
+              />
+            </p>
+            <p class="control">
+              <button class="button is-rounded is-medium">Search</button>
+            </p>
+          </div>
+        </li>
+    </nav>
     <div class="main">
       <div class="box">
         <div class="logo navbar-item">
