--- a/src/index.html
+++ b/src/index.html
@@ -17,31 +17,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
-    <nav>
-     <li> <div class="main">
-        <div class="box">
-          <div class="logo navbar-item">
-            <i class="fa-solid fa-bomb navbar-item"></i>
-          </div>
-          <div class="field has-addons navbar-item">
-            <p class="control">
-              <input
-                class="input is-medium is-rounded"
-                type="text"
-                placeholder="Search a skill"
-              />
-            </p>
-            <p class="control">
-              <button class="button is-rounded is-medium">Search</button>
-            </p>
-          </div>
-        </li>
-    </nav>
     <div class="main">
       <div class="box">
+        <nav class="navbar">
+          <ul class="navbar-item">
+            <li>
         <div class="logo navbar-item">
           <i class="fa-solid fa-bomb navbar-item"></i>
         </div>
+            </li>
+            <li>
         <div class="field has-addons navbar-item">
           <p class="control">
             <input
@@ -54,26 +39,34 @@
             <button class="button is-rounded is-medium">Search</button>
           </p>
         </div>
-
+            </li>
+            <li>
         <a>
           <i class="fa-solid fa-house"></i>
         </a>
-
+        </li>
+        <li>
         <a>
           <i class="fa-solid fa-comment-dots"></i>
         </a>
-
+        </li>
+        <li>
         <a>
           <i class="fa-solid fa-suitcase"></i>
         </a>
-
+      </li>
+      <li>
         <a>
           <i class="fa-solid fa-bell"></i>
         </a>
-
+      </li>
+      <li>
         <a>
           <i class="fa-brands fa-discord"></i>
         </a>
+        </li>
+        </ul>
+      </nav>
       </div>
     </div>
   </body>
