--- a/src/index.html
+++ b/src/index.html
@@ -21,12 +21,9 @@
       <div class="box">
         <nav class="navbar">
           <ul class="navbar-item">
-            <li>
         <div class="logo navbar-item">
           <i class="fa-solid fa-bomb navbar-item"></i>
         </div>
-            </li>
-            <li>
         <div class="field has-addons navbar-item">
           <p class="control">
             <input
@@ -39,7 +36,7 @@
             <button class="button is-rounded is-medium">Search</button>
           </p>
         </div>
-            </li>
+        <ul class="navbar-item">
             <li>
         <a>
           <i class="fa-solid fa-house"></i>
